Revision history for Perl-Critic-Bangs

1.07_01
====================================
[FIXES]
Remove use of Perl::Critic::Utils::PPIRegexp, which has been removed
from the Perl-Critic distribution, with calls to native PPI methods. This
allows P::C::Bangs to install when using perl 5.14.  Thanks, Elliot Shank.


1.06    Sun May 23 00:56:49 CDT 2010
====================================
[ENHANCEMENTS]
ProhibitFlagComments now checks POD for XXXes and the like, not just
comments.  Thanks to Matt Boyle.


1.04    Sat Apr 17 11:13:42 CDT 2010
====================================
[FIXED]
Fixed a problem with dereferencing a node in ProhibitRefProtoOrProto.
Thanks to Mike Hind.


1.02    Sat Mar  7 14:40:38 CST 2009
====================================
No new features.

Updated the licensing to be explicitly GPLv3 or Artistic 2.0.

Removed incorrect tests for compatibility with Perl::Critic 1.098.


1.00    Mon May 26 19:10:40 CDT 2008
====================================
Updated to work with modern Perl::Critic 1.084.  Thanks to
Elliot Shank for making that happen.

[FIXES]
Fixed bug in ProhibitCommentedOutCode which prevented custom
configuration from working.

[ENHANCEMENTS]
Added utf8 to the list of exceptions in ProhibitNumberedNames.
The exceptions are also now case-insensitive.

Added ProhibitUselessRegexModifiers.pm policy switched to testing
method that Perl::Critic uses.


0.22    Sun Jul 16 22:09:10 CDT 2006
====================================
[FIXES]
$1 no longer runs afoul of ProhibitNumberedNames


0.20    Fri Jul 14 22:36:09 CDT 2006
====================================
First real working version that you'd want to install.

