@@ -9,7 +9,7 @@ use English qw(-no_match_vars);
 
 #-----------------------------------------------------------------------------
 
-our $VERSION = '1.06';
+our $VERSION = '1.07_01';
 
 #-----------------------------------------------------------------------------
 
